--- a/package.json
+++ b/package.json
@@ -1,10 +1,8 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -18,5 +16,15 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.1",
     "nodemon": "^2.0.20"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/satyamasai/nem-evaluation-4.git"
+  },
+  "bugs": {
+    "url": "https://github.com/satyamasai/nem-evaluation-4/issues"
+  },
+  "homepage": "https://github.com/satyamasai/nem-evaluation-4#readme",
+  "description": ""
 }
